<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data class="DataBinding_activity_login"></data>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    <EditText
        android:id="@+id/login_email"
        android:layout_marginTop="@dimen/login_edit_email_top_marign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        />
    />
    </android.support.design.widget.TextInputLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="@dimen/login_button_top_padding"
    android:paddingLeft="@dimen/login_button_left_padding">
    <Button
        android:id="@+id/login_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/press_login_button"/>

    <Button
        android:id="@+id/login_signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/press_signUp_button"/>
    
</LinearLayout>
    <TextView
        android:id="@+id/login_forget_password"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_text"
        android:visibility="gone"
        />
    <ProgressBar
        android:id="@+id/login_progressbar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:visibility="gone"/>
</LinearLayout>
    </LinearLayout>
</layout>