<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data class="DataBinding_activity_signup"></data>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="196dp"
            android:layout_height="196dp"
            android:layout_gravity="center"
            android:src="@drawable/default_image"
            app:civ_border_width="2dp"
            app:civ_border_color="#fff">

        </de.hdodenhof.circleimageview.CircleImageView>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/signup_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_first_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/signup_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_last_email" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <EditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_enter_email" />
    </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:imeActionId="@+id/login" />
            />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/signup_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/signup_button" />
        <TextView
            android:id="@+id/signup_already_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/signup_already_member"
            android:layout_gravity="center"
            android:textSize="@dimen/forget_enter_email_text_size"
            />
        <ProgressBar
            android:id="@+id/signup_progressbar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>
</ScrollView></layout>