<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data class="DataBinding_activity_foregotpsw"></data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_text"
                android:textSize="@dimen/forget_text_size"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_enter_your_email"
                android:textSize="@dimen/forget_enter_email_text_size"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                    <EditText
                        android:id="@+id/forgot_email_edit"
                        android:layout_marginTop="@dimen/login_edit_email_top_marign"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_email" />
                </android.support.design.widget.TextInputLayout>
                <Button
                    android:id="@+id/forgot_password_email_send_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/press_foreget_password_button"
                    android:layout_marginLeft="@dimen/login_button_left_padding"/>
            </LinearLayout>
            <ProgressBar
                android:id="@+id/forgot_progressbar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:visibility="gone"/>
        </LinearLayout>

    </LinearLayout>
</layout>